--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "docker:build": "docker build -t jojo-discount-fe .",
     "docker:run": "docker run -p 3000:3000 jojo-discount-fe",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "type:check": "tsc --noEmit"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
